// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frameworkFactory should auto init correctly in default config 1`] = `
Config {
  "basePath": "./",
  "beforeMiddleware": [
    "vite-before",
  ],
  "files": [],
  "frameworks": [],
  "middleware": [
    "vite",
  ],
  "plugins": [],
  "reporters": [],
  "urlRoot": "/",
}
`;

exports[`frameworkFactory should not auto init if vite.autoInit is false in config 1`] = `
Config {
  "basePath": "./",
  "files": [],
  "frameworks": [],
  "plugins": [],
  "reporters": [],
  "urlRoot": "/",
  "vite": {
    "autoInit": false,
  },
}
`;
